# Shop_Page

./: .env-ex  .gitignore  README.md  package.json
shop_backend/: CMakeLists.txt
shop_backend/include/: ICart.h  IProfile.h  IWishlist.h  env_loader.h
shop_backend/lib/: Cart.h  Profile.h  crypto_util.h
shop_backend/private/: users.json
shop_backend/src/: main.cpp  win_accept_ex_loader.cpp
shop_frontend/: README.md  angular.json  package-lock.json  package.json  set-env.ts
shop_frontend/src/: index.html  styles.css
shop_frontend/src/app/: app.component.spec.ts  app.component.ts  app.config.ts  app.routes.ts
shop_frontend/src/app/component/cart-item/: cart-item.component.css  cart-item.component.html  cart-item.component.ts
shop_frontend/src/app/component/item/: item.component.css  item.component.html  item.component.ts
shop_frontend/src/app/component/nav-bar/: nav-bar.component.css  nav-bar.component.html  nav-bar.component.ts
shop_frontend/src/app/component/prev-buy/: prev-buy.component.spec.ts  prev-buy.component.ts
shop_frontend/src/app/component/trending/: trending.component.css  trending.component.html  trending.component.ts
shop_frontend/src/app/component/welcome-screen/: welcome-screen.component.css  welcome-screen.component.html  welcome-screen.component.ts
shop_frontend/src/app/component/wish-list/: wish-list.component.ts
shop_frontend/src/app/item/: item.component.css  item.component.html
shop_frontend/src/app/nav-bar/: nav-bar.component.css  nav-bar.component.html
shop_frontend/src/app/pages/cart-page/: cart-page.component.css  cart-page.component.html  cart-page.component.ts
shop_frontend/src/app/pages/home-page/: home-page.component.css  home-page.component.html  home-page.component.ts
shop_frontend/src/app/pages/login/: login.component.css  login.component.html  login.component.ts
shop_frontend/src/app/pages/profile/: profile.component.css  (+2 more)
shop_frontend/src/app/services/: auth.service.ts  backend_health_check.service.ts  backend_health_guard.ts  cart.service.ts  jwt_interceptor.ts  wishlist.service.ts
shop_frontend/src/app/welcome-screen/: welcome-screen.component.css  welcome-screen.component.html
shop_frontend/src/assets/: items.json
(+8 files in other folders)
